# nessocode

./: .env.example  .gitignore  README.md  config.yaml  nessocode.py  pyproject.toml
agent/: __init__.py  api.py  config.py  core.py  display.py  mcp_client.py  memory.py  skills.py  tools.py
harbor_agent/: nessocode_agent.py  pyproject.toml  setup.sh
skills/: commit.yaml  explain.yaml  fix.yaml  refactor.yaml  review.yaml  tests.yaml
